<resources>
    <string name="app_name">Resume Builder</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="add_image_to_database">Add image to database</string>
    <string name="pick_image">Pick image</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="save">Save</string>
    <string name="full_name">Full Name</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_resume">Edit Resume</string>
    <string name="view_resume">View Resume</string>
    <string name="create_resume">Create Resume</string>
    <string name="resumes">Resumes</string>
    <string name="resume_has_been_saved">Resume has been saved</string>
    <string name="ok">OK</string>
    <string name="saved">Saved</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="personal_information">Personal Information</string>
    <string name="sections">Sections</string>
    <string name="skills">Skills</string>
    <string name="education_details">Education Details</string>
    <string name="work_summary">Work Summary</string>
    <string name="career_objective">Career Objective</string>
    <string name="total_years_of_experience">Total Years of Experience</string>
    <string name="project_details">Project Details</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="company_name">Company Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="jan_2021">Jan 2021</string>
    <string name="apr_2022">Apr 2022</string>
    <string name="skill">Skill</string>
    <string name="course_or_degree">Course or Degree</string>
    <string name="passing_year">Passing Year</string>
    <string name="dummy_year">2021</string>
    <string name="percentage_or_cgpa">Percentage/CGPA</string>
    <string name="dummy_cgpa">3.60</string>
    <string name="no_resumes_found">No Resumes Found</string>
    <string name="file_name">File name</string>
    <string name="save_resume">Save Resume</string>
    <string name="project_name">Project Name</string>
    <string name="team_size">Team Size</string>
    <string name="role">Role</string>
    <string name="technology_used">Technology Used</string>
    <string name="summary">Summary</string>
    <string name="done">Done</string>
    <string name="preview_pdf">Preview PDF</string>

</resources>